[package]
name = "sublib"
version = "0.1.0"
authors = ["Diggory Hardy <git@dhardy.name>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
liba = { path = "liba" }
libb = { path = "libb" }

[workspace]
members = ["liba", "libb"]
